--- a/css/index.css
+++ b/css/index.css
@@ -249,11 +249,9 @@ footer
 
 {
 
-	height: 5%;
+	height: 40px;
 
 	width: 100%;
-
-	text-align: center;
 
 	position: fixed;
 
@@ -263,28 +261,14 @@ footer
 
 	background: white;
 
-	box-shadow: 0 0 3px #aaaaaa;
-
-}
-
-footer small
-
-{
-
-	z-index: 9;
-
-	vertical-align: middle;
-
-	width: 100%;
+	box-shadow: 0 0 5px #aaaaaa;
 
 	text-align: center;
 
-	display: block;
+	vertical-align: middle;
 
-	margin:auto;
+	z-index: 9;
 
-	font-size: 15px;
-
-
+	line-height: 40px;
 
 }
